--- a/.env
+++ b/.env
@@ -25,6 +25,6 @@ APP_SECRET=9a6b0f8cb133925939e217d14a24945e
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://21_bacza:X5h3k9m8e7@127.0.0.1:3306/21_bacza?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://username:password@127.0.0.1:3306/username?serverVersion=8&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
