--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=9a6b0f8cb133925939e217d14a24945e
+APP_SECRET=
 
 ###< symfony/framework-bundle ###
 
